--- a/style/style.css
+++ b/style/style.css
@@ -37,7 +37,7 @@ img{
     padding: 0;
 }
 .popular-searches li {
-	color: #1e3e99;
+	color: #2348b2;
 	margin: 5px 25px 5px 0; 
 	font-size: 14px; 
 	letter-spacing: .1px; 
