--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@
 	display: flex;
 	flex-direction: row; 
 	flex-wrap: wrap; 
+	padding: 0;
 }
 .artwork-list li{
 	display: block; 
@@ -25,7 +26,6 @@
 .img-wrapper-empty{
 	height: 140px;
 	width: 170px;
-	background: gainsboro;
 	border: 0.3px solid dimgray;
 	border-radius: 5px;
 	display: flex;
@@ -52,7 +52,6 @@ img{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    /* justify-content: center; */
     width: 90%;
     margin: 0 auto;
     padding: 0;
@@ -60,7 +59,6 @@ img{
 .popular-searches li {
 	border: 2px solid white; 
 	border-radius: 35px;
-    /* background: gainsboro; */
     width: 152px;
     background: #f96a59;
     padding: 6px 0px;
@@ -74,4 +72,10 @@ img{
 .popular-searches li:hover {
 	background: white;
     color: #f96a59;
+}
+li.no-results{
+	font-size: 12px;
+	padding: 0;
+	margin: 5px 0 0 0;
+	color: dimgray;
 }
