--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,18 @@
 .small-text{
 	font-size: 12.2px;
 }
+.search-input{
+	padding: 5px 5px;
+    height: 39px;
+    width: 215px;
+    color: dimgray;
+    font-size: 22px;
+    font-weight: lighter;
+    letter-spacing: 1.5px;
+}
+.search-input:focus{
+	outline: none;
+}
 .artwork-list{
 	display: flex;
 	flex-direction: row; 
