--- a/style/style.css
+++ b/style/style.css
@@ -110,7 +110,12 @@ li.no-results{
 	background: white;
 }
 .top100-detail-wrapper .detail-view{
+	padding: 40px 0 0 90px;
 	width: 40%;
+}
+.detail-img{
+	max-width: 400px;
+	max-height: 600px;
 }
 
 
