--- a/style/style.css
+++ b/style/style.css
@@ -30,12 +30,12 @@
 	text-overflow: ellipsis;
 	overflow: hidden;
 }
-.img-wrapper{
+/*.img-wrapper{
 	display: flex; 
 	flex-direction: column;
 	align-items: center;
-}
-.img-wrapper-empty{
+}*/
+/*.img-wrapper-empty{
 	height: 140px;
 	width: 170px;
 	border: 0.3px solid dimgray;
@@ -44,11 +44,9 @@
 	flex-direction: row; 
 	justify-content: center;
 	align-items: center;
-}
+}*/
 img{
-	max-height: 175px;
-	max-width: 190px;
-	text-align: center;
+	width: 300px;
 }
 .popular-searches-wrapper{
 	background: #f96a59;
@@ -69,7 +67,7 @@ img{
     padding: 0;
 }
 .popular-searches li {
-	border: 2px solid white; 
+	/*border: 2px solid white; */
 	border-radius: 35px;
     width: 152px;
     background: #f96a59;
@@ -91,64 +89,76 @@ li.no-results{
 	margin: 5px 0 0 0;
 	color: dimgray;
 }
+/* Explore Top Artworks - Layout */
 .top20-detail-wrapper{
 	display: flex;
 	flex-direction: row;
+	/*border: 2px solid black;*/
+	width: 100%;
 }
+.top20-list{
+	width: 50%;
+	padding: 15px;
+}
+.detail-view{
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.detail-card div {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+/* Explore Top Artworks - Top 20 Artworks */
 .top20-detail-wrapper ul{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
 	padding: 0;
 	list-style: none;
 	background: gainsboro;
-	width: 60%;
 }
 .top20-detail-wrapper ul li{
+	display: flex;
+    direction: row;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+	height: 100px;
+	width: 96px;
 	font: lightgray;
-	margin: 5px 5px;
-	padding: 3px;
+	overflow: hidden;
 }
-.top20-detail-wrapper ul li:hover{
-	background: white;
+.top20-detail-wrapper ul li img{
+	width: 90px;
 }
-.top100-detail-wrapper .detail-view{
-	padding: 40px 0 0 90px;
-	width: 40%;
+.top20-detail-wrapper ul li img:hover{
+	width: 100px;
 }
-.detail-img{
-	max-width: 400px;
-	max-height: 600px;
+/* Explore Top Artworks - Detail View */
+.detail-card {
+	/*border: 4px solid pink;*/
+	height: 500px;
+	width: 80%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.detail-card .img-container {
+	/*border: 2px solid black;*/
+	width: 100%;
+	height: 400px;
+	overflow: hidden;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+.detail-card .title-artist-year-wrapper {
+	border: 1px solid green;
+	width: 60%;
+	margin: 0 auto;
+	font-size: 12.5px;
+}
+.detail-card .title-artist-year-wrapper .title {
+	border: 1px solid red;
+}
