--- a/style/style.css
+++ b/style/style.css
@@ -93,6 +93,7 @@ li.no-results{
 .top20-detail-wrapper{
 	display: flex;
 	flex-direction: row;
+	justify-content: space-between;
 	/*border: 2px solid black;*/
 	width: 100%;
 }
@@ -113,11 +114,13 @@ li.no-results{
 }
 /* Explore Top Artworks - Top 20 Artworks */
 .top20-detail-wrapper ul{
+	height: 442px;
+    margin-top: 26px;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-around;
-	padding: 0;
+	padding: 10px 10px 0px 10px;
 	list-style: none;
 	background: gainsboro;
 }
@@ -127,38 +130,95 @@ li.no-results{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-	height: 100px;
-	width: 96px;
+	height: 90px;
+	width: 80px;
+	margin: 0px 5px;
 	font: lightgray;
 	overflow: hidden;
 }
 .top20-detail-wrapper ul li img{
-	width: 90px;
+	width: 100px;
+    margin: 0px 0px;
 }
 .top20-detail-wrapper ul li img:hover{
-	width: 100px;
+	width: 108px;
 }
 /* Explore Top Artworks - Detail View */
 .detail-card {
-	/*border: 4px solid pink;*/
-	height: 500px;
-	width: 80%;
+    height: 528px;
+    width: 80%;
+    overflow: hidden;
 }
 .detail-card .img-container {
-	/*border: 2px solid black;*/
 	width: 100%;
-	height: 400px;
+    height: 513px;
 	overflow: hidden;
 	display: flex;
-	flex-direction: row;
-	justify-content: center;
+	flex-direction: column;
 }
 .detail-card .title-artist-year-wrapper {
-	border: 1px solid green;
-	width: 60%;
 	margin: 0 auto;
 	font-size: 12.5px;
+    background: black;
+    color: white;
+    padding: 5px;
+    width: 85%;
+    height: 87px;
 }
-.detail-card .title-artist-year-wrapper .title {
-	border: 1px solid red;
+.detail-card .title-artist-year-wrapper .long-title {
+	width: 90%;
+	align-items: left;
 }
+.detail-card .title-artist-year-wrapper .title-button-wrapper {
+	display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 90%;
+}
+.detail-card .title-artist-year-wrapper .title-button-wrapper .short-title {
+	align-items: left;
+}
+.detail-card-img {
+	width: 85%;
+}
+/* Button */
+	/* unvisited link */
+.learn-more a {
+	text-decoration: none !important;
+    border-radius: 5px;
+    padding: 5px 7px;
+    margin: 5px;
+    color: white;
+    letter-spacing: .95px;
+    background-color: #f96a59;
+}
+	/* visited link */
+.learn-more a:visited {
+	text-decoration: none !important;
+    border-radius: 5px;
+    padding: 5px 7px;
+    margin: 5px;
+    color: white;
+    letter-spacing: .95px;
+    background-color: #f96a59;
+}
+	/* mouse over link */
+.learn-more a:hover, .learn-more a:active {
+	text-decoration: none;
+	border-radius: 5px;
+	padding: 5px 7px;
+    margin: 5px;
+    color: black;
+    letter-spacing: .95px;
+	background-color:white;
+}
+	/* selected link */ 
+/*.learn-more a:active {
+	text-decoration: none;
+	border-radius: 5px;
+	padding: 5px 7px;
+    margin: 5px;
+    color: black;
+    letter-spacing: .95px;
+	background-color:white;
+}*/
