--- a/style/style.css
+++ b/style/style.css
@@ -111,6 +111,7 @@ li.no-results{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	overflow: hidden;
 }
 /* Explore Top Artworks - Top 20 Artworks */
 .top20-detail-wrapper ul{
@@ -123,6 +124,7 @@ li.no-results{
 	padding: 10px 10px 0px 10px;
 	list-style: none;
 	background: gainsboro;
+	border-radius: 3px;
 }
 .top20-detail-wrapper ul li{
 	display: flex;
@@ -159,17 +161,18 @@ li.no-results{
 	flex-direction: column;
 }
 .detail-card .title-artist-year-wrapper {
-	margin: 0 auto;
+	border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
 	font-size: 12.5px;
     background: black;
     color: white;
     padding: 5px;
-    width: 85%;
-    height: 87px;
+    width: 100%;
 }
 .detail-card .title-artist-year-wrapper .long-title {
 	width: 90%;
 	align-items: left;
+	line-height: 2;
 }
 .detail-card .title-artist-year-wrapper .title-button-wrapper {
 	display: flex;
@@ -180,8 +183,18 @@ li.no-results{
 .detail-card .title-artist-year-wrapper .title-button-wrapper .short-title {
 	align-items: left;
 }
+.detail-card .img-container .box{
+	border-bottom: 1px solid grey;
+	border-left: 1px solid grey;
+	border-right: 1px solid grey;
+	border-radius: 3px;
+	width: 100%;
+    height: 100%;
+    flex-direction: row;
+    justify-content: center;
+}
 .detail-card-img {
-	width: 85%;
+	/*width: 85%;*/
 }
 /* Button */
 	/* unvisited link */
